cabal-version:       2.4
name:                adventofcode2021
version:             0.1.0.0
homepage:            https://github.com/githubuser/adventofcode2021#readme
license:             ISC
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      common
  default-language:    Haskell2010

  exposed-modules:
    Advent,
    Utils
  
  build-depends:
    base         ^>= 4.15,
    containers   ^>= 0.6,
    filepath,
    parsec,
    word8,
    bytestring,
    cryptohash-md5,
    base16-bytestring,
    benchpress

common day
  build-depends:       adventofcode2021, base
  default-language:    Haskell2010

executable day1
  import:           day
  main-is:          Day1.hs
  hs-source-dirs:   challenges
  build-depends:    containers

executable day2
  import:           day
  main-is:          Day2.hs
  hs-source-dirs:   challenges
  build-depends:    containers, parsec

executable day3
  import:           day
  main-is:          Day3.hs
  hs-source-dirs:   challenges
  build-depends:    unordered-containers

executable day4
  import:           day
  main-is:          Day4.hs
  hs-source-dirs:   challenges
  build-depends:    parsec, unordered-containers, array

executable day5
  import:           day
  main-is:          Day5.hs
  hs-source-dirs:   challenges
  build-depends:    unordered-containers, split

executable day6
  import:           day
  main-is:          Day6.hs
  hs-source-dirs:   challenges
  build-depends:    split

executable day7
  import:           day
  main-is:          Day7.hs
  hs-source-dirs:   challenges
  build-depends:    containers

executable day8
  import:           day
  main-is:          Day8.hs
  hs-source-dirs:   challenges
  build-depends:    parsec, unordered-containers, split

executable day9
  import:           day
  main-is:          Day9.hs
  hs-source-dirs:   challenges
  build-depends:    containers

executable day10
  import:           day
  main-is:          Day10.hs
  hs-source-dirs:   challenges
  build-depends:    unordered-containers, containers

executable day11
  import:           day
  main-is:          Day11.hs
  hs-source-dirs:   challenges
  build-depends:    unordered-containers, containers

executable day12
  import:           day
  main-is:          Day12.hs
  hs-source-dirs:   challenges
  build-depends:    unordered-containers, split, mtl

executable day13
  import:           day
  main-is:          Day13.hs
  hs-source-dirs:   challenges
  build-depends:    unordered-containers, split

executable day14
  import:           day
  main-is:          Day14.hs
  hs-source-dirs:   challenges
  build-depends:    unordered-containers

executable day15
  import:           day
  main-is:          Day15.hs
  hs-source-dirs:   challenges
  build-depends:    unordered-containers, split

executable day16
  import:           day
  main-is:          Day16.hs
  hs-source-dirs:   challenges
  build-depends:    unordered-containers, containers
executable day17
  import:           day
  main-is:          Day17.hs
  hs-source-dirs:   challenges
  build-depends:    unordered-containers, search-algorithms

